# RICO-32

./: .gitignore  ;  Cargo.toml  LICENSE  README.md  deny.toml  main.r32
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: sheet.sprt
examples/: hello_world.r32  platformer.r32  shooter.r32  tetris.r32
macro_procs/: Cargo.toml
macro_procs/src/: lib.rs
scripts/: main.lua
scripts/examples/: platformer.lua  shooter.lua  tetris.lua
scripts/player/: init.lua
src/: bitmap.rs  colors.rs  console_engine.rs  game_engine.rs  goon_engine.rs  lib.rs  log_engine.rs  lua_api.rs  main.rs  nav_bar_engine.rs  rico_engine.rs  script_engine.rs  sprite.rs  sprite_engine.rs  time.rs  utils.rs
src/engine/: console.rs  game.rs  mod.rs  nav_bar.rs  rico.rs  script.rs  sprite.rs
src/goonLang/: ast.rs  mod.rs
src/input/: keyboard.rs  mouse.rs
src/render/: bitmap.rs  colors.rs  mod.rs  pixels.rs  sprite_sheet.rs
src/rua/: interpreter.rs  lexer.rs
src/scripting/: cartridge.rs  lua.rs  mod.rs
src/utils/: bitmap.rs  colors.rs  keyboard.rs  mod.rs  mouse.rs  pixels.rs  sprite_sheet.rs  time.rs
