[package]
name = "rico-32"
version = "0.1.0"
edition = "2021"


[dependencies]
macro_procs = { path = "./macro_procs" }
winit = "0.28"
pixels = "0.12"
mlua = {version = "0.11.4", features = ["lua54", "vendored"] }
winapi = { version = "0.3", features = ["winbase"] }
byteorder = "1.5.0"
rayon = "1.11.0"
